<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.siom79.japicmp</groupId>
	<artifactId>japicmp-base</artifactId>
	<version>0.18.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>japicmp-base</name>
	<description>japicmp is a tool/maven plugin that compares two versions of a jar archive for binary compatibility.</description>
	<url>https://github.com/siom79/japicmp</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>martin.mois</id>
			<name>Martin Mois</name>
			<email>martin.mois@gmail.com</email>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Loki</name>
			<url>https://github.com/eldur</url>
		</contributor>
		<contributor>
			<name>Mario Zechner</name>
			<url>https://github.com/badlogic</url>
		</contributor>
		<contributor>
			<name>Daniel Norberg</name>
			<url>https://github.com/danielnorberg</url>
		</contributor>
		<contributor>
			<name>Mike Duigou</name>
			<url>https://github.com/mike-duigou</url>
		</contributor>
		<contributor>
			<name>Chetan Narsude</name>
			<url>https://github.com/243826</url>
		</contributor>
		<contributor>
			<name>Guy Rooms</name>
			<url>https://github.com/roomsg</url>
		</contributor>
		<contributor>
			<name>Caspar MacRae</name>
			<url>https://github.com/earcam</url>
		</contributor>
		<contributor>
			<name>Robert Metzger</name>
			<url>https://github.com/rmetzger</url>
		</contributor>
		<contributor>
			<name>Francois Lasne</name>
			<url>https://github.com/LasneF</url>
		</contributor>
		<contributor>
			<name>Niklas Therning</name>
			<url>https://github.com/ntherning</url>
		</contributor>
		<contributor>
			<name>Chas Honton</name>
			<url>https://github.com/chonton</url>
			<email>chas@honton.org</email>
		</contributor>
		<contributor>
			<name>Richard Atkins</name>
			<url>https://github.com/rjatkins</url>
		</contributor>
		<contributor>
			<name>Mark Raynsford</name>
			<url>https://github.com/io7m</url>
		</contributor>
		<contributor>
			<name>zhostasa</name>
			<url>https://github.com/zhostasa</url>
			<email>zhostasa@redhat.com</email>
		</contributor>
		<contributor>
			<name>twogee</name>
			<url>https://github.com/twogee</url>
		</contributor>
		<contributor>
			<name>Arnaud Vié</name>
			<url>https://github.com/UnasZole</url>
		</contributor>
		<contributor>
			<name>Buddhi Kulatunga</name>
			<url>https://github.com/bkulatun</url>
		</contributor>
		<contributor>
			<name>Rostislav Svoboda</name>
			<url>https://github.com/rsvoboda</url>
			<email>rsvoboda@redhat.com</email>
		</contributor>
		<contributor>
			<name>Rob Tompkins</name>
			<url>https://github.com/chtompki</url>
			<email>chtompki@gmail.com</email>
		</contributor>
		<contributor>
			<name>Tobias Preuss</name>
			<url>https://github.com/johnjohndoe</url>
		</contributor>
		<contributor>
			<name>Tom Bentley</name>
			<url>https://github.com/tombentley</url>
		</contributor>
		<contributor>
			<name>Richard Hierlmeier</name>
			<url>https://github.com/rhierlmeier</url>
		</contributor>
		<contributor>
			<name>Matt Benson</name>
			<url>https://github.com/mbenson</url>
			<email>gudnabrsam@gmail.com</email>
		</contributor>
		<contributor>
			<name>Stefano Cordio</name>
			<url>https://github.com/scordio</url>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<github.account>siom79</github.account>
		<github.project>japicmp</github.project>
		<github.actor>siom79</github.actor>
		<github.token>secret</github.token>
		<maven.site.skip>false</maven.site.skip>
		<maven-api.version>3.6.3</maven-api.version>
		<resolver.version>1.4.1</resolver.version> <!-- keep in sync with maven api version -->
		<reporting.version>3.1.0</reporting.version>
		<plugin-annotation.version>3.6.4</plugin-annotation.version>
		<surefireVersion>3.0.0-M7</surefireVersion>
		<javassist.version>3.29.1-GA</javassist.version>
		<guava.version>30.1-jre</guava.version>
		<jaxb.version>2.3.2</jaxb.version>
		<sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots</sonatypeOssDistMgmtSnapshotsUrl>
	</properties>

	<modules>
		<module>japicmp</module>
		<module>japicmp-testbase</module>
		<module>japicmp-maven-plugin</module>
		<module>japicmp-ant-task</module>
	</modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.3.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jaxb</groupId>
				<artifactId>jaxb-runtime</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>3.0.0</version>
			</extension>
		</extensions>

		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven-api.version}</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${maven.compiler.target}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M6</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<useReleaseProfile>false</useReleaseProfile>
						<releaseProfiles>release</releaseProfiles>
						<goals>deploy</goals>
						<remoteTagging>false</remoteTagging>
						<suppressCommitBeforeTag>false</suppressCommitBeforeTag>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.4.1</version>
					<configuration>
						<quiet>true</quiet>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<!-- explicitly define maven-deploy-plugin after other to force exec order -->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>deploy</id>
							<phase>deploy</phase>
							<goals>
								<goal>deploy</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefireVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${surefireVersion}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.12.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>5.1.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.7.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version>
					<executions>
						<execution>
							<id>default-prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<configuration>
								<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
							</configuration>
						</execution>
						<execution>
							<id>default-report</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
							<configuration>
								<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
								<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-publish-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<scmBranch>gh-pages</scmBranch>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<scm>
		<connection>scm:git:https://github.com/${github.account}/${github.project}.git</connection>
		<developerConnection>scm:git:https://github.com/${github.account}/${github.project}.git</developerConnection>
		<url>https://github.com/${github.account}/${github.project}.git</url>
		<tag>japicmp-base-0.15.7</tag>
	</scm>

	<distributionManagement>
		<site>
			<id>github</id>
			<url>scm:git:https://${github.actor}:${github.token}@github.com/${github.account}/${github.project}.git</url>
		</site>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<name>Central Repository OSSRH</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>doclint-java8-disabled</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<source>8</source>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-9</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>
								--illegal-access=warn
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<argLine>
								--illegal-access=warn
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalJOption>
							</additionalJOption>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
